@@ -1,4 +1,4 @@
-name: test
+name: macos
 
 on:
   push:
@@ -13,9 +13,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
           - macOS-latest
-          - windows-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
